// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AddOffer render errors: After submit with errors 1`] = `
<div>
  <div
    class="addOfferContainer"
  >
    <div
      class="card"
    >
      <a
        class="linkRoute"
        href="/add"
      >
        <div
          class="backButton"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-iconAlignment-3"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
           Back
        </div>
      </a>
      <form
        class="form"
        novalidate=""
      >
        <div
          class="row"
        >
          <div
            class="dropzoneContainer"
          >
            <div
              class="dropzoneFlex"
              tabindex="0"
            >
              <input
                accept="image/jpeg, image/png"
                autocomplete="off"
                multiple=""
                style="display: none;"
                tabindex="-1"
                type="file"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="font-size: 60px; color: rgb(244, 67, 54);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 6h-3.17L16 4h-6v2h5.12l1.83 2H21v12H5v-9H3v9c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zM8 14c0 2.76 2.24 5 5 5s5-2.24 5-5-2.24-5-5-5-5 2.24-5 5zm5-3c1.65 0 3 1.35 3 3s-1.35 3-3 3-3-1.35-3-3 1.35-3 3-3zM5 6h3V4H5V1H3v3H0v2h3v3h2z"
                />
              </svg>
              <div>
                <h3
                  class="red"
                >
                  Upload/Drop Logo * 
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    style="font-size: 14px; color: rgb(244, 67, 54);"
                    title="Upload company logo .png/.jpg/.jpeg in any resolution."
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </h3>
                <h3
                  class="dropzoneError"
                >
                  Company logo is required
                </h3>
              </div>
            </div>
          </div>
          <div
            class="topContainer"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-error Mui-error Mui-required Mui-required"
                data-shrink="false"
              >
                Short company name
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiInput-input"
                  name="company"
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-error Mui-error Mui-required Mui-required"
                data-shrink="false"
              >
                Company website
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiInput-input"
                  name="website"
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Invalid format ex. www.web.com
              </p>
            </div>
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error Mui-required Mui-required"
                data-shrink="true"
              >
                Company size
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                  name="companySize"
                  placeholder="10 - 23"
                  required=""
                  type="text"
                  value=""
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-outlineIcon-4"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </div>
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
          </div>
          <div
            class="topContainerCompany"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-companyType"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-companyType"
                  role="button"
                  tabindex="0"
                >
                  Choose company type
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="companyType"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectMargin-5 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-companyIndustry"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-companyIndustry"
                  role="button"
                  tabindex="0"
                >
                  Choose company industry
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="companyIndustry"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
          </div>
        </div>
        <div
          class="middleContainer"
        >
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-error Mui-error Mui-required Mui-required"
                data-shrink="false"
              >
                Title
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiInput-input"
                  name="title"
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-experience"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-experience"
                  role="button"
                  tabindex="0"
                >
                  Choose an experience level
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="experience"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 Mui-error Mui-error MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-employment"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-employment"
                  role="button"
                  tabindex="0"
                >
                  Choose an employment type
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="employment"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
          </div>
        </div>
        <div
          class="middleContainer"
        >
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink="false"
              >
                Monthly salary from (invoice net)
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                  name="minSalary"
                  type="number"
                  value=""
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-outlineFont-6"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink="false"
              >
                Monthly salary to (invoice net)
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="maxSalary"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-currency"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-currency"
                  role="button"
                  tabindex="0"
                >
                  Choose currency
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="currency"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="width100"
        >
          <h3
            class="titleMargin"
          >
            Tech Stack 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-outlineFont-6"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
              />
            </svg>
          </h3>
          <div
            class="techStackContainer"
          >
            <div
              aria-expanded="false"
              class="MuiAutocomplete-root makeStyles-autocomplete-11"
              role="combobox"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              >
                
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                >
                  <input
                    aria-autocomplete="list"
                    aria-invalid="true"
                    autocapitalize="none"
                    autocomplete="off"
                    class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                    id="tech-stack"
                    placeholder="Select technology or write a new one"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                  <div
                    class="MuiAutocomplete-endAdornment"
                  />
                </div>
              </div>
            </div>
            <div />
            <div
              class="techStackList"
            />
          </div>
        </div>
        <div
          class="width100"
        >
          <h3
            class="titleMargin"
          >
            Job description 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-outlineFont-6"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
              />
            </svg>
          </h3>
          <div>
            Fajny trix
          </div>
        </div>
        <div
          class="flexWidth"
        >
          <h3
            class="titleMargin"
          >
            Choose your location
          </h3>
        </div>
        <div
          class="flexWidth"
        >
          <div
            class="addressContainer"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-18 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error Mui-required Mui-required"
                data-shrink="true"
              >
                Office City
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiInput-input"
                  name="city"
                  placeholder="Warszawa"
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
          </div>
          <div
            class="addressContainer"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-18 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-error Mui-error Mui-required Mui-required"
                data-shrink="true"
              >
                Office street/Business Center
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiInput-input"
                  name="street"
                  placeholder="Grunwaldzka 34"
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Field is required
              </p>
            </div>
          </div>
          <div
            class="checkboxContainer"
          >
            <div
              class="MuiFormGroup-root"
            >
              <div
                class="MuiFormControl-root"
              >
                <div
                  class="MuiFormGroup-root"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-16"
                          data-indeterminate="false"
                          name="remote"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Fully Remote
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mapContainer"
        >
          <div
            class="leaflet-container leaflet-grab leaflet-touch-drag"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://c.tile.openstreetmap.org/12/2287/1348.png"
                      style="width: 256px; height: 256px; left: -44px; top: -251px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              >
                <img
                  alt=""
                  class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                  src="QuestionMark.png"
                  style="margin-left: -5px; margin-top: -55px; width: 40px; height: 40px; left: 0px; top: 0px; z-index: 0; z-index: 0; z-index: 0;"
                  tabindex="0"
                />
              </div>
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                   | © 
                  <a
                    href="http://osm.org/copyright"
                  >
                    OpenStreetMap
                  </a>
                   contributors
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="technologyMarginError"
        >
          <div
            class="technologyTitle"
          >
            Choose main technology
          </div>
          <div
            class="technologies"
          >
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="JS.png"
                />
                 
              </button>
              <div
                class="test"
              >
                JS
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="HTML.png"
                />
                 
              </button>
              <div
                class="test"
              >
                HTML
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Php.png"
                />
                 
              </button>
              <div
                class="test"
              >
                PHP
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Ruby.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Ruby
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Python.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Python
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Java.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Java
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Net.png"
                />
                 
              </button>
              <div
                class="test"
              >
                .Net
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Scala.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Scala
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="C++.png"
                />
                 
              </button>
              <div
                class="test"
              >
                C
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Mobile.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Mobile
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Testing.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Testing
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="DevOps.png"
                />
                 
              </button>
              <div
                class="test"
              >
                DevOps
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="UX:UI.png"
                />
                 
              </button>
              <div
                class="test"
              >
                UX/UI
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="PM.png"
                />
                 
              </button>
              <div
                class="test"
              >
                PM
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Game.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Game
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Security.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Security
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Data.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Data
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Goo.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Go
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="SAP.png"
                />
                 
              </button>
              <div
                class="test"
              >
                SAP
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Other.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Other
              </div>
            </div>
          </div>
        </div>
        <div
          class="bottomSection"
        >
          <h3
            class="titleMargin"
          >
            How to apply
          </h3>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-error Mui-error Mui-required Mui-required"
                data-shrink="false"
              >
                Enter apply email or paste link
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error Mui-error"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-error Mui-error MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="true"
                  class="MuiInputBase-input MuiInput-input"
                  name="email"
                  required=""
                  type="text"
                  value=""
                />
              </div>
              <p
                class="MuiFormHelperText-root Mui-error Mui-required"
              >
                Email or link is invalid
              </p>
            </div>
          </div>
          <h3
            class="titleMargin"
          >
            Agreements
          </h3>
          <h4
            class="headerInformation"
          >
            Information clause
          </h4>
          <div
            class="agreements"
          >
            <textarea
              class="makeStyles-error-9"
              rows="1"
              style="height: -20px; overflow: hidden;"
            >
              Informujemy, że administratorem danych jest ______________ z siedzibą w ___________, ul. _______________ (dalej jako "administrator"). Masz prawo do żądania dostępu do swoich danych osobowych, ich sprostowania, usunięcia lub ograniczenia przetwarzania, prawo do wniesienia sprzeciwu wobec przetwarzania, a także prawo do przenoszenia danych oraz wniesienia skargi do organu nadzorczego. Dane osobowe przetwarzane będą w celu realizacji procesu rekrutacji. Podanie danych w zakresie wynikającym z ustawy z dnia 26 czerwca 1974 r. Kodeks pracy jest obowiązkowe. W pozostałym zakresie podanie danych jest dobrowolne. Odmowa podania danych obowiązkowych może skutkować brakiem możliwości przeprowadzenia procesu rekrutacji. Administrator przetwarza dane obowiązkowe na podstawie ciążącego na nim obowiązku prawnego, zaś w zakresie danych dodatkowych podstawą przetwarzania jest zgoda. Dane osobowe będą przetwarzane do czasu zakończenia postępowania rekrutacyjnego i przez okres możliwości dochodzenia ewentualnych roszczeń, a w przypadku wyrażenia zgody na udział w przyszłych postępowaniach rekrutacyjnych - do czasu wycofania tej zgody. Zgoda na przetwarzanie danych osobowych może zostać wycofana w dowolnym momencie. Odbiorcą danych jest serwis Just Join IT oraz inne podmioty, którym powierzyliśmy przetwarzanie danych w związku z rekrutacją.
            </textarea>
            <textarea
              aria-hidden="true"
              class="makeStyles-error-9"
              readonly=""
              style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 98%;"
              tabindex="-1"
            />
            <span
              class="agreemErr"
            >
              Please fill company name and address
            </span>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-7 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Next Step
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Test AddOffer render errors: Render 1`] = `
<div>
  <div
    class="addOfferContainer"
  >
    <div
      class="card"
    >
      <a
        class="linkRoute"
        href="/add"
      >
        <div
          class="backButton"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-iconAlignment-3"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
           Back
        </div>
      </a>
      <form
        class="form"
        novalidate=""
      >
        <div
          class="row"
        >
          <div
            class="dropzoneContainer"
          >
            <div
              class="dropzoneFlex"
              tabindex="0"
            >
              <input
                accept="image/jpeg, image/png"
                autocomplete="off"
                multiple=""
                style="display: none;"
                tabindex="-1"
                type="file"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="font-size: 60px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 6h-3.17L16 4h-6v2h5.12l1.83 2H21v12H5v-9H3v9c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zM8 14c0 2.76 2.24 5 5 5s5-2.24 5-5-2.24-5-5-5-5 2.24-5 5zm5-3c1.65 0 3 1.35 3 3s-1.35 3-3 3-3-1.35-3-3 1.35-3 3-3zM5 6h3V4H5V1H3v3H0v2h3v3h2z"
                />
              </svg>
              <div>
                <h3
                  class=""
                >
                  Upload/Drop Logo * 
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    style="font-size: 14px;"
                    title="Upload company logo .png/.jpg/.jpeg in any resolution."
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </h3>
                
              </div>
            </div>
          </div>
          <div
            class="topContainer"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-required Mui-required"
                data-shrink="false"
              >
                Short company name
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="company"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-required Mui-required"
                data-shrink="false"
              >
                Company website
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="website"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-required Mui-required"
                data-shrink="true"
              >
                Company size
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                  name="companySize"
                  placeholder="10 - 23"
                  required=""
                  type="text"
                  value=""
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-outlineIcon-4"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="topContainerCompany"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-companyType"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-companyType"
                  role="button"
                  tabindex="0"
                >
                  Choose company type
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="companyType"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectMargin-5 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-companyIndustry"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-companyIndustry"
                  role="button"
                  tabindex="0"
                >
                  Choose company industry
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="companyIndustry"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middleContainer"
        >
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-required Mui-required"
                data-shrink="false"
              >
                Title
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="title"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-experience"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-experience"
                  role="button"
                  tabindex="0"
                >
                  Choose an experience level
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="experience"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-employment"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-employment"
                  role="button"
                  tabindex="0"
                >
                  Choose an employment type
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="employment"
                  required=""
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="middleContainer"
        >
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink="false"
              >
                Monthly salary from (invoice net)
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd"
                  name="minSalary"
                  type="number"
                  value=""
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-outlineFont-6"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
                data-shrink="false"
              >
                Monthly salary to (invoice net)
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="maxSalary"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-selectField-2 MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="mui-component-select-currency"
                  class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                  id="mui-component-select-currency"
                  role="button"
                  tabindex="0"
                >
                  Choose currency
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  name="currency"
                  tabindex="-1"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="width100"
        >
          <h3
            class="titleMargin"
          >
            Tech Stack 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-outlineFont-6"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
              />
            </svg>
          </h3>
          <div
            class="techStackContainer"
          >
            <div
              aria-expanded="false"
              class="MuiAutocomplete-root makeStyles-autocomplete-11"
              role="combobox"
            >
              <div
                class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
              >
                
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl MuiInputBase-adornedEnd"
                >
                  <input
                    aria-autocomplete="list"
                    aria-invalid="false"
                    autocapitalize="none"
                    autocomplete="off"
                    class="MuiInputBase-input MuiInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd"
                    id="tech-stack"
                    placeholder="Select technology or write a new one"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                  <div
                    class="MuiAutocomplete-endAdornment"
                  />
                </div>
              </div>
            </div>
            <div />
            <div
              class="techStackList"
            />
          </div>
        </div>
        <div
          class="width100"
        >
          <h3
            class="titleMargin"
          >
            Job description 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-outlineFont-6"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
              />
            </svg>
          </h3>
          <div>
            Fajny trix
          </div>
        </div>
        <div
          class="flexWidth"
        >
          <h3
            class="titleMargin"
          >
            Choose your location
          </h3>
        </div>
        <div
          class="flexWidth"
        >
          <div
            class="addressContainer"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-17 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-required Mui-required"
                data-shrink="true"
              >
                Office City
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="city"
                  placeholder="Warszawa"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="addressContainer"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-17 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink Mui-required Mui-required"
                data-shrink="true"
              >
                Office street/Business Center
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="street"
                  placeholder="Grunwaldzka 34"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="checkboxContainer"
          >
            <div
              class="MuiFormGroup-root"
            >
              <div
                class="MuiFormControl-root"
              >
                <div
                  class="MuiFormGroup-root"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiCheckbox-root MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-16"
                          data-indeterminate="false"
                          name="remote"
                          type="checkbox"
                          value=""
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Fully Remote
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mapContainer"
        >
          <div
            class="leaflet-container leaflet-grab leaflet-touch-drag"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://c.tile.openstreetmap.org/12/2287/1348.png"
                      style="width: 256px; height: 256px; left: -44px; top: -251px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              >
                <img
                  alt=""
                  class="leaflet-marker-icon leaflet-zoom-hide leaflet-interactive"
                  src="QuestionMark.png"
                  style="margin-left: -5px; margin-top: -55px; width: 40px; height: 40px; left: 0px; top: 0px; z-index: 0;"
                  tabindex="0"
                />
              </div>
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                   | © 
                  <a
                    href="http://osm.org/copyright"
                  >
                    OpenStreetMap
                  </a>
                   contributors
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="technologyMargin"
        >
          <div
            class="technologyTitle"
          >
            Choose main technology
          </div>
          <div
            class="technologies"
          >
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="JS.png"
                />
                 
              </button>
              <div
                class="test"
              >
                JS
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="HTML.png"
                />
                 
              </button>
              <div
                class="test"
              >
                HTML
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Php.png"
                />
                 
              </button>
              <div
                class="test"
              >
                PHP
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Ruby.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Ruby
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Python.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Python
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Java.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Java
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Net.png"
                />
                 
              </button>
              <div
                class="test"
              >
                .Net
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Scala.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Scala
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="C++.png"
                />
                 
              </button>
              <div
                class="test"
              >
                C
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Mobile.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Mobile
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Testing.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Testing
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="DevOps.png"
                />
                 
              </button>
              <div
                class="test"
              >
                DevOps
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="UX:UI.png"
                />
                 
              </button>
              <div
                class="test"
              >
                UX/UI
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="PM.png"
                />
                 
              </button>
              <div
                class="test"
              >
                PM
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Game.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Game
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Security.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Security
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Data.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Data
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Goo.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Go
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="SAP.png"
                />
                 
              </button>
              <div
                class="test"
              >
                SAP
              </div>
            </div>
            <div
              class="iconContainerAdd"
            >
              <button
                class="MuiButtonBase-root"
                tabindex="0"
                type="button"
              >
                <img
                  alt="Logo"
                  class="langImg"
                  src="Other.png"
                />
                 
              </button>
              <div
                class="test"
              >
                Other
              </div>
            </div>
          </div>
        </div>
        <div
          class="bottomSection"
        >
          <h3
            class="titleMargin"
          >
            How to apply
          </h3>
          <div
            class="widthPadding"
          >
            <div
              class="MuiFormControl-root MuiTextField-root makeStyles-textField-1 MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated Mui-required Mui-required"
                data-shrink="false"
              >
                Enter apply email or paste link
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiInput-input"
                  name="email"
                  required=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <h3
            class="titleMargin"
          >
            Agreements
          </h3>
          <h4
            class="headerInformation"
          >
            Information clause
          </h4>
          <div
            class="agreements"
          >
            <textarea
              class="makeStyles-textField-8"
              rows="1"
              style="height: -20px; overflow: hidden;"
            >
              Informujemy, że administratorem danych jest ______________ z siedzibą w ___________, ul. _______________ (dalej jako "administrator"). Masz prawo do żądania dostępu do swoich danych osobowych, ich sprostowania, usunięcia lub ograniczenia przetwarzania, prawo do wniesienia sprzeciwu wobec przetwarzania, a także prawo do przenoszenia danych oraz wniesienia skargi do organu nadzorczego. Dane osobowe przetwarzane będą w celu realizacji procesu rekrutacji. Podanie danych w zakresie wynikającym z ustawy z dnia 26 czerwca 1974 r. Kodeks pracy jest obowiązkowe. W pozostałym zakresie podanie danych jest dobrowolne. Odmowa podania danych obowiązkowych może skutkować brakiem możliwości przeprowadzenia procesu rekrutacji. Administrator przetwarza dane obowiązkowe na podstawie ciążącego na nim obowiązku prawnego, zaś w zakresie danych dodatkowych podstawą przetwarzania jest zgoda. Dane osobowe będą przetwarzane do czasu zakończenia postępowania rekrutacyjnego i przez okres możliwości dochodzenia ewentualnych roszczeń, a w przypadku wyrażenia zgody na udział w przyszłych postępowaniach rekrutacyjnych - do czasu wycofania tej zgody. Zgoda na przetwarzanie danych osobowych może zostać wycofana w dowolnym momencie. Odbiorcą danych jest serwis Just Join IT oraz inne podmioty, którym powierzyliśmy przetwarzanie danych w związku z rekrutacją.
            </textarea>
            <textarea
              aria-hidden="true"
              class="makeStyles-textField-8"
              readonly=""
              style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 98%;"
              tabindex="-1"
            />
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button-7 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Next Step
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
